--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,9 @@
 global-include *.pyx
-global-include *.pxd
+global-include *.pyx
+global-include *.pxi
+global-include *.h
+global-include *.cpp
+global-include *.cu
 
 global-exclude *.py[cod] __pycache__
 global-exclude *.so *.dll *.dylib
