--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,6 +17,8 @@ recursive-include docs *.svg
 recursive-include docs Makefile
 recursive-include _modules *.rst
 recursive-exclude docs/images *.pdf
+recursive-include docs *.bib
+recursive-include docs *.in
 
 recursive-include imate *.rst
 recursive-include examples *.py
