--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ global-include *.cu
 global-exclude *.py[cod] __pycache__
 global-exclude *.so *.dll *.dylib
 global-exclude *.o
+global-exclude *.swp
 
 recursive-include docs *.bat
 recursive-include docs *.css
@@ -26,6 +27,7 @@ recursive-include examples *.rst
 recursive-include notebooks *.ipynb
 recursive-include tests *.py
 recursive-include tests *.rst
+recursive-exclude tests *.svg
 
 include CHANGELOG.rst
 include README.rst
