--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -41,7 +41,8 @@ jobs:
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
-                  python setup.py test 
+                  mv imate imate-DoNotImport
+                  pytest
 
             - name: Coverage
               run: |
