--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -40,7 +40,8 @@ jobs:
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
-                  python setup.py test 
+                  mv imate imate-DoNotImport
+                  pytest
 
             - name: Coverage
               run: |
