--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -27,10 +27,6 @@ jobs:
             - name: Install cibuildwheel
               run: |
                   python -m pip install cibuildwheel==1.7.1
-            
-            - name: Install Visual C++ for Python 2.7
-              if: runner.os == 'Windows'
-              run: choco install vcpython27 -f -y
 
             - name: Install OpenMP and numpy for mac
               if: runner.os == 'macos'
@@ -104,7 +100,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
-                python-version: [2.7, 3.6, 3.7, 3.8, 3.9]
+                python-version: [3.6, 3.7, 3.8, 3.9]
 
         steps:
             - name: Setup Python ${{ matrix.python-version }}
@@ -120,12 +116,6 @@ jobs:
 
             - name: Checkout
               uses: actions/checkout@v2
-
-            - name: Install Visual C++ for Python 2.7
-              if: |
-                  runner.os == 'Windows' &&
-                  matrix.python-version == '2.7'
-              run: choco install vcpython27 -f -y
 
             - name: Test
               run: |
