--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -33,7 +33,8 @@ jobs:
               run: |
                   brew install libomp
 
-                  # This is needed to import numpy in pypy3 (but not needed for pypy2 and CPython)
+                  # This is needed to import numpy in pypy3 (but not needed for
+                  # pypy2 and CPython)
                   brew install openblas
                   OPENBLAS="$(brew --prefix openblas)"
                   pip3 install numpy
@@ -42,7 +43,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp3*-macosx*"
+                  CIBW_SKIP: "cp27-* pp27-* pp3*-macosx*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
             
