--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -50,10 +50,6 @@ requirements:
 test:
     imports:
         - imate
-        - imate.ComputeLogDeterminant
-        - imate.ComputeTraceOfInverse
-        - imate.GenerateMatrix
-        - imate.InterpolateTraceOfInverse
     requires:
         - pytest
         - pytest-cov
@@ -61,8 +57,8 @@ test:
 
 about:
     home: {{ data['url'] }}
-    license: MIT
-    license_family: MIT
+    license: BSD-3-Clause
+    license_family: BSD
     license_file: LICENSE.txt
     summary: {{ data['description'] }}
     description: {{ data['description'] }}
