--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -33,6 +33,7 @@ requirements:
         - python
         - setuptools
         - numpy>1.11
+        - scipy>=1.5
         - cython>=0.29
         - pip
         - llvm-openmp  # [osx]
@@ -41,7 +42,7 @@ requirements:
         - python
         - numpy>1.11
         # - {{ pin_compatible('numpy') }}
-        - scipy
+        - scipy>=1.5
         - suitesparse
         - matplotlib
         - seaborn
