--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -26,7 +26,12 @@ jobs:
 
             - name: Install cibuildwheel
               run: |
-                  python -m pip install cibuildwheel==1.7.1
+                  python -m pip install cibuildwheel==1.11.0
+
+            - name: Install numpy
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade numpy
 
             - name: Install OpenMP and numpy for mac
               if: runner.os == 'macos'
@@ -43,7 +48,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "cp27-* pp27-* cp35-* pp35-* pp3*-macosx* pp3*-manylinux"
+                  CIBW_SKIP: "cp27-* pp27-* cp35-* pp35-* pp3*-macosx* pp3*-manylinux cp39-manylinux*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
             
