--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -30,12 +30,20 @@ jobs:
               run: |
                   brew install suite-sparse
                   brew install libomp
+                  
+            - name: Install CUDA
+              uses: Jimver/cuda-toolkit@v0.2.1
+              id: cuda-toolkit
+              with:
+                  cuda: '11.2.2'
 
             - name: Install package and dependencies
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[extra]
+              env:
+                  USE_CUDA: 1
 
             - name: Test
               run: |
