--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -46,11 +46,20 @@ jobs:
                   USE_CUDA: 1
 
             - name: Test
+              if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
                   mv imate imate-DoNotImport
                   pytest
+
+            - name: Test2
+              if: matrix.python-version == 'pypy-3.6' || matrix.python-version == 'pypy-3.7'
+              run: |
+                  pypy -m pip install --upgrade pytest
+                  pypy -m pip install --upgrade pytest-cov
+                  mv imate imate-DoNotImport
+                  pypy -m pytest
 
             - name: Coverage
               run: |
