--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -37,6 +37,7 @@ include requirements.txt
 include pyproject.toml
 include .coveragerc
 include tox.ini
+include environment.yml
 
 exclude TODO.rst
 exclude .travis.yml
